# decor

./: .flake8  .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  EVAL.md  LICENSE  README.md  TODO.md  beaver.codon  beaver.sequre  bitween.codon  bresenham.dig.dyn.traces  builtin.codon  cheby.codon  chebyshev.codon  config.ini  decor.codon  derivatives.codon  dev_setup_notes.md  fourier.codon  plots.ipynb  pyproject.toml  taylor.codon  tests.sequre  utils.codon
applications/: cox.ipynb  gwas.codon  mnist.codon  siren.codon  siren.ipynb
applications/others/mw2/SCI/tests/activation/: CMakeLists.txt  bolt_exp4_modified.cpp  bolt_softmax.cpp  iron_exp.cpp  iron_softmax.cpp  our_MW.cpp  our_exp_nagx_test.cpp  our_sin.cpp  our_softmax_ours.cpp
cbmc/: notes.parser.md  parser.py  parser1.py  parser2.py  parser3.py  parser4.py  parser5.py  parser6.py  program.float.c  program.float.out.c  program.int.c  program.unsigned.c  program.unsigned.out.c
docker/: Dockerfile
docs/: conf.py  index.rst  readme.md
dump-gcp-coastal/: cheby_0_32_CP0.p  cheby_0_32_CP1.p  cheby_0_32_CP2.p  cheby_1_32_CP0.p  cheby_1_32_CP1.p  cheby_1_32_CP2.p  cheby_2_32_CP0.p  cheby_2_32_CP1.p  cheby_2_32_CP2.p  cheby_3_32_CP0.p  cheby_3_32_CP1.p  cheby_3_32_CP2.p  decor_0_32_CP0.p  decor_0_32_CP1.p  decor_0_32_CP2.p  decor_1_32_CP0.p  decor_1_32_CP1.p  decor_1_32_CP2.p  decor_2_32_CP0.p  decor_2_32_CP1.p  decor_2_32_CP2.p  decor_3_32_CP0.p  decor_3_32_CP1.p  decor_3_32_CP2.p  decor_trig_0_32_CP0.p  decor_trig_0_32_CP1.p  decor_trig_0_32_CP2.p  decor_trig_1_32_CP0.p  decor_trig_1_32_CP1.p  decor_trig_1_32_CP2.p  decor_trig_2_32_CP0.p  decor_trig_2_32_CP1.p  decor_trig_2_32_CP2.p  decor_trig_3_32_CP0.p  decor_trig_3_32_CP1.p  decor_trig_3_32_CP2.p  fourier_0_32_CP0.p  fourier_0_32_CP1.p  fourier_0_32_CP2.p  fourier_1_32_CP0.p  (+20 more)
dump-gcp-lan/: cheby_0_32_CP0.p  cheby_0_32_CP1.p  cheby_0_32_CP2.p  cheby_0_64_CP0.p  cheby_0_64_CP1.p  cheby_0_64_CP2.p  cheby_1_32_CP0.p  cheby_1_32_CP1.p  cheby_1_32_CP2.p  cheby_1_64_CP0.p  cheby_1_64_CP1.p  cheby_1_64_CP2.p  cheby_2_32_CP0.p  cheby_2_32_CP1.p  cheby_2_32_CP2.p  cheby_2_64_CP0.p  cheby_2_64_CP1.p  cheby_2_64_CP2.p  cheby_3_32_CP0.p  cheby_3_32_CP1.p  cheby_3_32_CP2.p  cheby_3_64_CP0.p  cheby_3_64_CP1.p  cheby_3_64_CP2.p  decor_0_32_CP0.p  decor_0_32_CP1.p  decor_0_32_CP2.p  decor_0_64_CP0.p  decor_0_64_CP1.p  decor_0_64_CP2.p  decor_1_32_CP0.p  decor_1_32_CP1.p  decor_1_32_CP2.p  decor_1_64_CP0.p  decor_1_64_CP1.p  decor_1_64_CP2.p  decor_2_32_CP0.p  decor_2_32_CP1.p  decor_2_32_CP2.p  decor_2_64_CP0.p  (+82 more)
miscs/: sfs-part.py
(+324 files in other folders)
