[tool.poetry]
name = "bitween"
version = "0.1.0"
description = "Synthesizing Random Self-Reducible Properties"
authors = ["Ferhat Erata <ferhat.erata@yale.edu>", "Timos Antonopoulos <timos.antonopoulos@yale.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.5,<3.13"
numpy = "^1.26.0"
sympy = "^1.12"
scipy = "^1.11.3"
pandas = "^2.1.1"
gurobipy = "^10.0.3"
scikit-learn = "^1.3.1"
click = "^8.1.7"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
torch = "^2.1.0"
tqdm = "^4.66.1"
z3-solver = "^4.13.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
flake8 = "^6.1.0"
flake8-unused-arguments = "^0.0.13"
black = "^23.9.1"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.3.0"
sphinx-autoapi = "^3.0.0"
linkify-it-py = "^2.0.2"
# https://piccolo-theme.readthedocs.io/en/latest/
piccolo-theme = "^0.18.0"
# https://pydata-sphinx-theme.readthedocs.io/en/latest/


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
