macro (add_test_IRON _name)
	add_executable(IRON-${_name} "iron_${_name}.cpp")
    target_link_libraries(IRON-${_name} SCI-Math) 
    target_link_libraries(IRON-${_name} SCI-FloatingPoint) 
endmacro()

macro (add_test_BOLT _name)
	add_executable(BOLT-${_name} "bolt_${_name}.cpp")
    target_link_libraries(BOLT-${_name} SCI-FloatingPoint)
    target_link_libraries(BOLT-${_name} SCI-Math) 
endmacro()

macro (add_test_our _name)
	add_executable(our-${_name} "our_${_name}.cpp")
    target_link_libraries(our-${_name} SCI-FloatingPoint)
    target_link_libraries(our-${_name} SCI-Math) 
endmacro()

# add_test_IRON(layer_norm)
add_test_IRON(softmax)
add_test_IRON(exp)
# add_test_IRON(gelu)
# add_test_IRON(tanh) 

# add_test_BOLT(128ot)
# add_test_BOLT(vector_scalar_mul)
# add_test_BOLT(mat_vec_crossterm)
# add_test_BOLT(matrix_vector_unsigned_mul)
add_test_BOLT(softmax)
add_test_our(softmax_ours)
# add_test_BOLT(gelu)
# add_test_BOLT(tanh)
# add_test_BOLT(layer_norm)
# add_test_BOLT(exp)
# add_test_BOLT(exp4)
add_test_BOLT(exp4_modified)
# add_test_our(div_comm)
# add_test_BOLT(gpexp_test)
# add_test_BOLT(nag_exp_test)
add_test_our(exp_nagx_test)
# add_test_BOLT(nag_exp)
# add_test_BOLT(signed_crossterm_cipher_plain)
add_test_our(MW)
# add_test_BOLT(hadamard_product_test)
add_test_our(sin)

